fix color contrast

--- a/robotics/styles/join.css
+++ b/robotics/styles/join.css
@@ -123,23 +123,23 @@ button:hover {
 }
 
 .button_close{
-    background-color: rgb(145, 145, 248);
+    background-color: rgb(198, 198, 248);
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: larger;
     padding: .4rem .7rem;
-    border: 2px solid rgb(67, 67, 180);
+    border: 2px solid rgb(164, 164, 235);
     position: absolute;
     top: 1.4rem; left: 1.4rem;
     color: black;
 }
 
 .button_close:hover{
-    background-color: rgb(135, 135, 231);
+    background-color: rgb(177, 177, 247);
 }
 
 dialog{
-    background-color: rgb(108, 108, 243);
+    background-color: rgb(179, 179, 228);
     text-align: center;
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
